Redesign prsk_counter UI and update project links
Applied a modern dark theme redesign to prsk_counter/style.css and restructured songScore.html for improved layout and button centering. Minor formatting adjustment in dipsin/index.html.

--- a/dipsin/index.html
+++ b/dipsin/index.html
@@ -32,7 +32,7 @@ body, html {height: 100%}
         <h2 class="w3-jumbo w3-animate-top w3-center">Dip Sin Sound Effect
           List</h2>
         <p class="w3-animate-top w3-large w3-center"
-          style="letter-spacing: 10px; margin-top: -0.5%;"><span id="randomSlogan">Bottom text</span></p>
+          style="letter-spacing: 10px; margin-top: -0.5%;"><span id="randomSlogan">Bottom text</span></p><br>
       </div>
 
       <div>
