--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="projects-grid">
             <!-- Project 1.1 - UNC Foundation (Ongoing) -->
             <div class="project-card">
-                <a href="unc/EN/index.html" class="image-link">
+                <a href="unc/ZH/index.html" class="image-link">
                     <div class="card-image">
                         <img
                             src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80"
@@ -43,7 +43,7 @@
                     <h3>The UNC Foundation Databases</h3>
                     <p>Nullify the Unnatural Chaos - One of the various forces
                         in the TRPG worldview</p>
-                    <a href="unc/EN/index.html" class="card-link">View Project
+                    <a href="unc/ZH/index.html" class="card-link">View Project
                         <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="status-indicator status-ongoing"
