--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="main-error">
     <header>
         <div class="logo">
             <div class="name-container">
@@ -55,5 +55,6 @@
     </div>
 
     <script src="js/common.js"></script>
+    <script src="js/error404.js"></script>
 </body>
 <!-- InstanceEnd --></html>
