--- a/404.html
+++ b/404.html
@@ -55,6 +55,14 @@
     </div>
 
     <script src="js/common.js"></script>
-    <script src="js/error404.js"></script>
+    <script>
+        const path = window.location.pathname;
+
+        if (path.includes("/unc")) {
+            document.getElementById("main-error").innerHTML = `
+                <h1>Docs 404</h1>
+                <p>The documentation page you’re looking for doesn’t exist.</p>`;
+        }
+    </script>
 </body>
 <!-- InstanceEnd --></html>
