--- a/404.html
+++ b/404.html
@@ -65,12 +65,8 @@
         <script>
         const path = window.location.pathname;
 
-        if (path.includes("/unc/EN/doc") || path.includes("/unc/ZH/doc")) {
-            if (path.includes("/unc/EN/doc")) {
-                document.documentElement.lang = "en";
-            } else {
-                document.documentElement.lang = "zh";
-            }
+        if (path.includes("/unc/ZH/doc")) {
+            document.documentElement.lang = "zh";
             document.getElementById("title").innerText = "UNC-XXX | ACCESS DENIED";
             document.getElementById("main-error").innerHTML = `
                 <link rel="stylesheet" href="../../css/documentStyle.css"><div class="page-header">
@@ -115,7 +111,7 @@
             <div class="main-content">
                 <div class="content-section" id="section-error">
                     <div class="section-title">[權限驗證失敗]</div>
-                    <p>⛔ 您當前的安全等級（<span class="clearance-level">[未授權]</span>）不足以查看此內容</p>
+                    <p>⛔ 您當前的安全等級不足以查看此內容</p>
                     <p class="notice">請聯繫站點主管或提交<a href="#">權限升級申請</a></p>
                     <br>
                     <p class="footnote">此事件已記錄至安全日誌 ██/██/██████</p>
@@ -128,7 +124,65 @@
             </div>
         </div>`;
         }
+        if (path.includes("/unc/EN/doc")) {
+            document.documentElement.lang = "en";
+            document.getElementById("title").innerText = "UNC-XXX | ACCESS DENIED";
+            document.getElementById("main-error").innerHTML = `
+                <link rel="stylesheet" href="../../css/documentStyle.css"><div class="page-header">
+            <div class="header-content">
+                <div class="header-title-group">
+                    <h1>
+                        <span class="logo-title-group">
+                            <img src="../../material/logo.png" alt="UNC Logo"
+                                height="48">
+                            <span>UNC Foundation Databases</span>
+                        </span>
+                    </h1>
+                    <div class="header-links">
+                        <a href="../index.html">Home</a> |
+                        <a href="#">Documents</a> |
+                        <a href="#">Sites</a> |
+                        <a href="#">About Us</a>
+                    </div>
+                </div>
+                <button id="language-switch" class="language-btn">EN</button>
+            </div>
+        </div>
 
+        <div class="page-container">
+            <!-- Sidebar -->
+            <div class="sidebar">
+                <h3>Navigation</h3>
+                <ul>
+                    <li><a href="#">Item List</a></li>
+                    <li><a href="#">Recent Updates</a></li>
+                    <li><a href="#">Secure Facilities</a></li>
+                    <li><a href="#">Clearance Levels</a></li>
+                </ul>
+                <div class="sidebar-footer">
+                    <p class="warning"
+                        title="Restricted Access Code 101: Due to insufficient clearance, access to related information and content is limited to A-level personnel or above.">⚠
+                        Restricted Access (101)</p>
+                </div>
+            </div>
+
+            <!-- Main content -->
+            <div class="main-content">
+                <div class="content-section" id="section-error">
+                    <div class="section-title">[Permission Verification Failed]</div>
+                    <p>⛔ The current security level is insufficient to view this content.</p>
+                    <p class="notice">Please contact the site administrator or <a href="#">submit a permission upgrade request</a>.</p>
+                    <br>
+                    <p class="footnote">This incident has been recorded in the security log ██/██/██████.</p>
+                    <p>Violation Code:<strong>ERR_ACCESS_DENIED_101</strong></p>
+                </div>
+            </div> <!-- end main-content -->
+
+            <!-- Table of Contents -->
+            <div class="toc">
+            </div>
+        </div>`;
+        }
     </script>
     </body>
     <!-- InstanceEnd --></html>
