--- a/404.html
+++ b/404.html
@@ -111,11 +111,13 @@
             <div class="main-content">
                 <div class="content-section" id="section-error">
                     <div class="section-title">[權限驗證失敗]</div>
-                    <p>⛔ 您當前的安全等級不足以查看此內容</p>
-                    <p class="notice">請聯繫站點主管或提交<a href="#">權限升級申請</a></p>
+                    <p>⛔ 您當前的安全等級不足以查看此內容。</p>
+                    <p class="notice">請聯繫站點主管或提交<a href="#">權限升級申請</a>。</p>
                     <br>
                     <p class="footnote">此事件已記錄至安全日誌 ██/██/██████</p>
                     <p>違規代碼：<strong>ERR_ACCESS_DENIED_101</strong></p>
+                    <br>
+                    <p><a href="#" onclick="window.history.back(); return false;">← 請按此回到上一頁。</a></p>
                 </div>
             </div> <!-- end main-content -->
 
@@ -175,6 +177,8 @@
                     <br>
                     <p class="footnote">This incident has been recorded in the security log ██/██/██████.</p>
                     <p>Violation Code:<strong>ERR_ACCESS_DENIED_101</strong></p>
+                    <br>
+                    <p><a href="#" onclick="window.history.back(); return false;">← Please click here to return to the previous page.</a></p>
                 </div>
             </div> <!-- end main-content -->
 
