--- a/404.html
+++ b/404.html
@@ -81,7 +81,7 @@
                     </h1>
                     <div class="header-links">
                         <a href="../index.html">首頁</a> |
-                        <a href="#">文件</a> |
+                        <a href="0menu.html">文件</a> |
                         <a href="#">站點</a> |
                         <a href="#">關於我們</a>
                     </div>
@@ -142,7 +142,7 @@
                     </h1>
                     <div class="header-links">
                         <a href="../index.html">Home</a> |
-                        <a href="#">Documents</a> |
+                        <a href="0menu.html">Documents</a> |
                         <a href="#">Sites</a> |
                         <a href="#">About Us</a>
                     </div>
